<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewFoodName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewInsideMaterials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewInsideMaterials"
                app:layout_constraintStart_toStartOf="@+id/textViewFoodName"
                app:layout_constraintTop_toBottomOf="@+id/textViewFoodName" />

            <TextView
                android:id="@+id/textViewHowToMake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewHowToMake"
                app:layout_constraintStart_toStartOf="@+id/textViewInsideMaterials"
                app:layout_constraintTop_toBottomOf="@+id/textViewInsideMaterials" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_button" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_button"
                app:layout_constraintEnd_toEndOf="@+id/editButton"
                app:layout_constraintStart_toStartOf="@+id/editButton"
                app:layout_constraintTop_toBottomOf="@+id/editButton"
                app:srcCompat="@drawable/ic_delete_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>